# news_ingestion

./: CMakeLists.txt  DataExtraction.cpp  DataExtraction.h  DataStore.cpp  DataStore.h  Main.cpp  Makefile  NewsTypes.h  README.md  SentimentScorer.cpp  SentimentScorer.h  logs.cpp  logs.h  style.qss
components/: conn_scheduler.yaml
